perf: improved performance of tools